[package]
name = "openqa"
version = "0.1.0"
authors = ["Richard Palethorpe <rpalethorpe@suse.com>"]

[dependencies]
http = "^0.1"
bytes = "^0.4"
hyper = "^0.12"
hyper-tls = "^0.2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
futures = "0.1.21"
failure = "0.1.1"
rust-crypto = "0.2.36"
time = "0.1.40"
log = "^0.4"
rust-ini = "^0.12"

[dev-dependencies]
env_logger = "^0.5"
